--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,7 +11,7 @@ hero:
       link: /guides/frontend/01-introduction
       icon: right-arrow
     - text: Back-end Guide
-      link: /guides/backend/
+      link: /guides/backend/01-introduction
       icon: right-arrow
 ---
 
