--- a/src/content/docs/guides/backend/02-setup.mdx
+++ b/src/content/docs/guides/backend/02-setup.mdx
@@ -46,6 +46,10 @@ XATA_BRANCH=main
 XATA_DB_URL=https://your-workspace-name.xata.sh/db/toystore?branchName=main
 
 OPENAI_API_KEY=""
+
+# Only needed for testing suites
+ADMIN_EMAIL=""
+ADMIN_PASSWORD=""
 ```
 
 > **Tip:** Obtain `XATA_API_KEY` and `XATA_DB_URL` from your [Xata dashboard](https://xata.io).
